--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "_lib",
     "test",
     "tests",
-    "_example"
+    "_example",
+    "_data"
   ],
   "dependencies": {
     "angular": ">=1.3.0"
